--- a/coursera/index.html
+++ b/coursera/index.html
@@ -36,9 +36,20 @@
         </ul>
     </nav>
     <body>
+        <div id="skills">
+            Skills
+        </div>
+        <div id="experience">
+            Experience
+        </div>
+        <div id="network">
+            Network
+        </div>
     </body>
     <aside>
-
+        <div id="about">
+            Aside
+        </div>
     </aside>
     <footer>
 
